testsuite/tests/th/T17379b.stderr

T17379b.hs:8:2: error: [GHC-18816]
    RecGadtC must have at least one constructor name
    When splicing a TH declaration: data T where :: {} -> T
